Fix image and code formatting

--- a/_posts/programming/2020-10-04-c-const.md
+++ b/_posts/programming/2020-10-04-c-const.md
@@ -7,7 +7,7 @@ The section was interesting because despite programming in C a lot during my dur
 what the course provides but I still learned a lot from this section itself.
 
 `const` is a type qualifier that is often used in C and C++ programming, especially appearing in the standard libraries frequently. An example is the function definition of `strlen`:
-```
+```c
        size_t strlen(const char *s);
 ```
 The main purpose of `const` keyword is to document to programmers and compilers that the object cannot be mutated after initialization. A type qualifier is simply just giving additional information 
@@ -16,7 +16,7 @@ not supposed to be possible anyways. However, do not bet on your `const` objects
 
 Let's look at a simple example of `const` before I delve into what I learned from the course:
 
-```
+```c
 const int x = 10;
 x = 20;
 ```
@@ -40,7 +40,7 @@ It's all a matter of preference on how you read the line. For instance, `const i
 What about pointers? How does `const` work with pointers? Let's see an example using the definition of `strlen`. `const char *s` means that the function will not modify the string you pass into the 
 function. Let's take a look at a simple implementation of `strlen` I made up on the spot:
 
-```
+```c
 size_t strlen(const char *s) {
         size_t size = 0;
         for (;*s; ++s) {
@@ -54,7 +54,7 @@ size_t strlen(const char *s) {
 As you can see from this implementation, you can modify locally the value of `str` to traverse through the string. This implementation does not stop you from incrementing the pointer of the string you 
 pass into the function as long as you don't modify the contents of what `str` is pointing to. We can see this with another example, where we point `const char *s` to a totally different area in memory than the one we passed into the function.
 
-```
+```c
 #include <string.h>
 #include <stdio.h>
 int puts_f(const char *s) {
@@ -77,7 +77,7 @@ The output of example 3 would be `baka` instead of the string, `zaku`, which we 
 **However,** this does not mean a function with the argument `const char *s` cannot modify the string you are pointing to. As I said `const` qualifier is just for documentation purpose and your compiler 
 will try to prevent any modification. You can explicitly remove the `const` qualifier when you assign its value to another pointer. With the new pointer, you can modify the original string as seen in example 4:
 
-```
+```c
 #include <stdio.h>
 #include <string.h>
 
@@ -111,7 +111,7 @@ string after calling strlen_f: haku
 
 ## So what happens if we swap the order of the const?
 As I said in my example with `const int x`, that the order of the qualifier does not matter. However, when dealing with pointers, it can get a bit confusing. Like before where `const int x` and `int const x` are the same, `const char *s` and `char const *s` are equivalent. But the following statements below mean very different things.
-```
+```c
 const int *s;
 int *const s;
 const int *const s;
@@ -127,7 +127,7 @@ The major difference is the placement of `const` between the pointer `*` (it's o
  declaration means s is pointing to some `int` that is non-mutable. The latter refers that the pointer `s` is non-mutable but the value in memory is still mutable. I'll present two examples to make
  this clear.
 
-```
+```c
 int *const s = 1;
 int *s2 = 2;
 s = s2;
@@ -145,19 +145,19 @@ test3.c:7:4: error: assignment of read-only variable ‘s’
 In example 3, we saw that we could change the address where `s` points to. So why can we no longer do that when we change the declaration of `s` to `int *const s`? As I said before, `s` is no longer
 a pointer pointing to somewhere that is "write-protected". With the new declaration, the address where `s` points to is "write-protected" while the data is not as seen below:
 
-```
+```c
 int *const s = (int *)malloc(sizeof(int));
 *s = 1;
-printf("before modification %d\n", *s);
+printf("before modification: %d\n", *s);
 *s = 2;
-printf("after modification %d\n", *s);
+printf("after modification: %d\n", *s);
 ```
 **Example 6:** Changing the value pointed by `int *const`:
 
 **Output:**
 ```
-before modification 1
-after modification 2
+before modification: 1
+after modification: 2
 ```
 
 Example 6 illustrates that modifications are allowed to variables declared as `int *const` as long as the pointer is not changed. Looking at all these examples I have provided so far, you should be able
