Resolve improper links

--- a/_pages/csc290.md
+++ b/_pages/csc290.md
@@ -8,15 +8,15 @@ title: CSC290
 CSC290 (Communication Skills for Computer Science) is a course that is offered at the University of Toronto. The course is mandatory for all students pursuing a major or specialist in Computer Science. The aim for the course is to enhance the written, verbal, team work and critical thinking of students who aim to pursue a profession in the Tech Sector.
 
 In the course, students are instructed to write a blog on an assigned topic each week to practice their writing and thinking. Below are various blogs I have written in the course:
-* [Communications in IT](communications-in-it)
-* [What is Professional Behaviour](what-is-professional-behaviour)
-* [Preparing for the Real World: Teamwork](preparing-for-the-real-world-teamwork)
-* [Isn’t Business Analyst and Project Manager the same thing?](isnt-business-analyst-and-project-manager-the-same-thing)
-* [The Type and Expectations of Guest Speakers](the-type-and-expectations-of-guest-speakers)
-* [Personal Thoughts on Participation](personal-thoughts-on-participation)
-* [Personal Thoughts on Two-Stage Test Format](personal-thoughts-on-participation)
-* [Comments on Group Work](comments-on-group-work)
-* [Is CSC290 a Useful Course?](is-csc290-a-useful-course)
-* [Reflection of the Course](reflection-of-the-course)
-* [Reflection on my Presentation](reflection-on-my-presentation)
-* [Finale: A Time of Reflection](finale-a-time-of-reflection)
+* [Communications in IT](../communications-in-it)
+* [What is Professional Behaviour](../what-is-professional-behaviour)
+* [Preparing for the Real World: Teamwork](../preparing-for-the-real-world-teamwork)
+* [Isn’t Business Analyst and Project Manager the same thing?](../isnt-business-analyst-and-project-manager-the-same-thing)
+* [The Type and Expectations of Guest Speakers](../the-type-and-expectations-of-guest-speakers)
+* [Personal Thoughts on Participation](../personal-thoughts-on-participation)
+* [Personal Thoughts on Two-Stage Test Format](../personal-thoughts-on-participation)
+* [Comments on Group Work](../comments-on-group-work)
+* [Is CSC290 a Useful Course?](../is-csc290-a-useful-course)
+* [Reflection of the Course](../reflection-of-the-course)
+* [Reflection on my Presentation](../reflection-on-my-presentation)
+* [Finale: A Time of Reflection](../finale-a-time-of-reflection)
