[POST] Remove unneeded image

--- a/_posts/personal/2021-01-28-books-i-read-2021.md
+++ b/_posts/personal/2021-01-28-books-i-read-2021.md
@@ -103,7 +103,7 @@ where the author talks about his book to the employees at Google and ever
 since then, it has been on my list for a few years.
 
 
-<img src = "https://raw.githubusercontent.com/zakuArbor/blog/master/assets/books/algorithmic-thinking-copies.png" alt = "The front and back cover of Algorthmic Thinking from the two copies I own" class = "center"/>
+<img src = "https://raw.githubusercontent.com/zakuArbor/blog/master/assets/algorithmic-thinking-copies.jpg" alt = "The front and back cover of Algorthmic Thinking from the two copies I own" class = "center"/>
 <p class = "excerpt">The two copies of Algorithmic Thinking I own. I plan to gift one copy to a friend once the pandemic is over</p>
 
 *<a href = "https://www.goodreads.com/book/show/52555533-algorithmic-thinking">Algorithmic Thinking</a>* 
@@ -339,8 +339,4 @@ it would be a nice revisit to the series since I have no interest in rewatching 
 * <a href = "https://www.goodreads.com/book/show/38926387-desolation">Legend of the Galactic Heroes - Desolation</a>
 * <a href = "https://www.goodreads.com/book/show/9062509-good-luck-yukikaze">Good Luck Yukikaze</a>
 * <a href = "https://www.goodreads.com/book/show/56090627-slayers-volumes-1-3-collector-s-edition-slayers">Slayers Volumes 1-3 Collector's Edition</a>
-
-<img src = "https://raw.githubusercontent.com/zakuArbor/blog/master/assets/utm/csc207_paint.png" alt = "an example of a CSC207 Paint Project" class = "center"/>
-<p class = "excerpt">An example of a CSC207 Paint Project</p>
-
 
