[Posts] Fix minor issues

--- a/_posts/personal/2021-01-29-books-i-read-2021.md
+++ b/_posts/personal/2021-01-29-books-i-read-2021.md
@@ -70,18 +70,24 @@ Visit the last section, if you want to see the list without any commentary.
 	}
 </style>
 
-
+<br/>
 
 ---
 
+<p/>
+
 # Computer Related
+
+<p/>
+
+---
 
 As a former student in Computer Science, it naturally makes sense that I read 
 one or two books on the subject. While I have a large list of books I plan on 
 reading on this subject, the two I plan on reading from start to finish are:
 
-* <a href = "https://www.goodreads.com/book/show/52555533-algorithmic-thinking">Algorithmic Thinking: A Problem-Based Introduction</a>
-* <a href = "https://www.goodreads.com/book/show/25666050-algorithms-to-live-by">Algorithms to Live By: The Computer Science of Human Decisions</a>
+* [Algorithmic Thinking: A Problem-Based Introduction](https://www.goodreads.com/book/show/52555533-algorithmic-thinking")
+* [Algorithms to Live By: The Computer Science of Human Decisions](https://www.goodreads.com/book/show/25666050-algorithms-to-live-by")
 
 <center>
 <div style = "display: inline-block;" class = "multiple_img_div center" >
@@ -91,23 +97,24 @@ reading on this subject, the two I plan on reading from start to finish are:
 </center>
 
 Although the first two contains "Algorithm" in the title, the two books 
-approach the topic of algorithm differently. *<a href = "https://www.goodreads.com/book/show/52555533-algorithmic-thinking">Algorithmic Thinking</a>* 
+approach the topic of algorithm differently. *[Algorithmic Thinking](https://www.goodreads.com/book/show/52555533-algorithmic-thinking")* 
 is a book that requires the readers to think and work on problems that are 
 extracted from International Programming Competitions to learn various concepts 
 in Computer Science such as recursion, dynamic programming, graphs, and data 
-structures. While the latter, *<a href = "https://www.goodreads.com/book/show/25666050-algorithms-to-live-by">Algorithms To Live By</a>*,
+structures. While the latter, *[Algorithms To Live By](https://www.goodreads.com/book/show/25666050-algorithms-to-live-by")*,
 is a book that displays 
 how algorithms used by computers can also be applied to our everyday lives. I 
-recall this book from a replay on the youtube channel <a href = "https://www.youtube.com/watch?v=OwKj-wgXteo">Talks at Google</a> 
+recall this book from a replay on the youtube channel [Talks at Google](https://www.youtube.com/watch?v=OwKj-wgXteo") 
 where the author talks about his book to the employees at Google and ever 
 since then, it has been on my list for a few years.
 
+<br/>
 
 <img src = "https://raw.githubusercontent.com/zakuArbor/blog/master/assets/algorithmic-thinking-copies.jpg" alt = "The front and back cover of Algorthmic Thinking from the two copies I own" class = "center"/>
 <p class = "excerpt">The two copies of Algorithmic Thinking I own. I plan to gift one copy to a friend once the pandemic is over</p>
 
-*<a href = "https://www.goodreads.com/book/show/52555533-algorithmic-thinking">Algorithmic Thinking</a>* 
-is a book written by <a href = "https://www.danielzingaro.com/">Daniel Zingaro</a>, a 
+*[Algorithmic Thinking](https://www.goodreads.com/book/show/52555533-algorithmic-thinking")* 
+is a book written by [Daniel Zingaro](https://www.danielzingaro.com/"), a 
 professor at my University. Although I never formally took a course under him, 
 he was often either the course coordinator or the other lecturer,
 so I am very familiar with the way he teaches. I often attended his 
@@ -117,25 +124,31 @@ teaches the subject was very clear. Upon hearing the news from my friends of a
 new book Zingaro was writing, I preordered the book. If I find anything 
 compelling, I may write a book review so stay tuned.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1520144564l/38925026._SY475_.jpg" alt = "Book cover of The History of Basic" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/38925026-endless-loop">Endless Loop</a>
+[Endless Loop](https://www.goodreads.com/book/show/38925026-endless-loop")
 is a 
 history book about BASIC, a programming language I often hear about among 
 senior programmers and computer enthusiasts. From the few computer/tech history books 
 I have read, I thought I would continue the tradition of reading some tech 
 history books each year. Books specifically on Computer History I've read includes 
-<a href = "https://www.goodreads.com/book/show/15937797-computer">Computer: A History of the Information Machine</a> and 
-<a href = "https://www.goodreads.com/book/show/53011383-uni">UNIX: A History and a Memoir</a>.
+[Computer: A History of the Information Machine](https://www.goodreads.com/book/show/15937797-computer") and 
+[UNIX: A History and a Memoir](https://www.goodreads.com/book/show/53011383-uni").
 I am hoping *Endless Loop* will be excellent as the other two.
 
 <br/>
 
+---
+
 # STEM Related
+
+---
 
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1609355352l/52275335._SY475_.jpg" alt = "Book cover of How to Avoid a Climate Disaster" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/52275335-how-to-avoid-a-climate-disaster">How to Avoid a Climate Disaster: The Solutions We Have and the Breakthroughs We Need</a>
+[How to Avoid a Climate Disaster: The Solutions We Have and the Breakthroughs We Need](https://www.goodreads.com/book/show/52275335-how-to-avoid-a-climate-disaster")
 \- Climate Change is one of the biggest threats to the stability of human 
 civilization. The fact that humans can accelerate the warming of Earth is 
 concerning. Yet, I have little knowledge on the subject and the 
@@ -150,9 +163,11 @@ book will not bottleneck the reader in the technicalities while giving
 readers a fair understanding of the potential these technologies have to 
 combat climate change.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1550145086l/43852758.jpg" alt = "Book cover of How to" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/43852758-how-to">How To: Absurd Scientific Advice for Common Real-World Problems</a> 
+[How To: Absurd Scientific Advice for Common Real-World Problems](https://www.goodreads.com/book/show/43852758-how-to") 
 is a book that supposedly approaches problems in absurd ways that make 
 readers think and learn science. Although unorthodox, I think this 
 approach of teaching may be effective to think about concepts in ways 
@@ -160,19 +175,23 @@ we would not think of to solve problems which leads us to understand
 the concept itself in a much deeper or more expansive manner. 
 I wonder if I will rage at the approaches or be intrigued.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1381287623l/17841838.jpg" alt = "Book cover of The Outer Limits of Reason" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/17841838-the-outer-limits-of-reason">The Outer Limits of Reason: What Science, Mathematics, and Logic Cannot Tell Us</a> 
-is a book I saw being recommended on Youtube by <a href = "https://www.youtube.com/watch?v=qHfrCaZscXI&t=1s">Zach Star</a>, a youtuber who loves Math and Physics. 
+[The Outer Limits of Reason: What Science, Mathematics, and Logic Cannot Tell Us](https://www.goodreads.com/book/show/17841838-the-outer-limits-of-reason") 
+is a book I saw being recommended on Youtube by [Zach Star](https://www.youtube.com/watch?v=qHfrCaZscXI&t=1s"), a youtuber who loves Math and Physics. 
 The book intrigued me because it approaches in high level the limitations of 
 science, math, and logic. Normally books approach how much potential the concepts 
 they cover have but this does the opposite. Sorts of reminds me of the idea of 
 computational complexity, where you can classify problems into different classes and 
 whether problems can be solved or not (within a reasonable amount of time).
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1589293018l/53401494._SX318_.jpg" alt = "Book cover of The Infinite Retina" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/53401494-the-infinite-retina">The Infinite Retina: Spatial Computing, Augmented Reality, and how a collision of new technologies are bringing about the next tech revolution</a> 
+[The Infinite Retina: Spatial Computing, Augmented Reality, and how a collision of new technologies are bringing about the next tech revolution](https://www.goodreads.com/book/show/53401494-the-infinite-retina") 
 is a book that talks about the potential and future of technologies. 
 This contrasts the previous book on my list, 
 whereby it does not say what are the limitations. This is also another book 
@@ -180,10 +199,12 @@ Zach Star recommended, and from what I understood, the book covers what the
 future technologies will be within the next 5-10 years and their impacts on 
 the industry and society.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1552885037l/39074550._SY475_.jpg" alt = "Book cover of Humble Pi" class = "center"/>
 
 Based on the description, 
-<a href = "https://www.goodreads.com/book/show/39074550-humble-pi">Humble Pi: A Comedy of Maths Errors</a> 
+[Humble Pi: A Comedy of Maths Errors](https://www.goodreads.com/book/show/39074550-humble-pi") 
 sounds like a book that is both comedic and informative. We should always 
 learn from the past mistakes and avoid them in the future. I am looking into 
 this book as a way to tell myself why I should care about Math and why I 
@@ -191,9 +212,11 @@ should learn from the mistakes I make in Math seriously.
 I think this book will be a nice light read while I am prepping for my 
 studies in Math and Physics.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1544963815l/34890015._SY475_.jpg" alt = "Book cover of Factfulness" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/34890015-factfulness">Factfulness: Ten Reasons We're Wrong About the World – and Why Things Are Better Than You Think</a> 
+[Factfulness: Ten Reasons We're Wrong About the World – and Why Things Are Better Than You Think](https://www.goodreads.com/book/show/34890015-factfulness") 
 is a book that is supposedly will change the way I view the world. 
 I want to view the world more positively, learning that the world we 
 live in is much better than how I see it. Of course, the world is 
@@ -204,21 +227,27 @@ So let’s see if this book can change my mind.
 
 <br/>
 
+---
+
 # Religion and Philosophy
+
+---
 
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1404579418l/480236.jpg" alt = "Book cover of The Screwtape Letters" class = "center"/>
 
 As a human who grew up in the church, I often feel doubts and uncertain where 
 I stand. Therefore, I want to read the Bible more and learn more about the 
 faith. 
-<a href = "https://www.goodreads.com/book/show/480236.The_Screwtape_Letters">The Screwtape Letters</a> 
+[The Screwtape Letters](https://www.goodreads.com/book/show/480236.The_Screwtape_Letters") 
 seems like an enjoyable piece of work that combines religion and satire together. 
 Another reason why I choose this book was because it was written by C.S Lewis who 
 wrote *The Chronicles of Narnia*, a children's literature I greatly enjoyed.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1606147973l/56019043.jpg" alt = "Book cover of Beyond Order" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/56019043-beyond-ordedr">Beyond Order: 12 More Rules For Life</a> 
+[Beyond Order: 12 More Rules For Life](https://www.goodreads.com/book/show/56019043-beyond-ordedr") 
 is Jordan Peterson’s latest book that is coming in the spring which 
 builds from his previous book 12 Rules for Life by laying out another 12 
 rules for humans to follow to establish a balance between order and chaos. 
@@ -233,7 +262,11 @@ he does. So I am excited to see what he has to offer in his book Beyond Order.
 
 <br/>
 
+---
+
 # Light Novels (English Translated novels of Japanese fiction)
+
+---
 
 Growing up, I was fascinated with the characters and stories from anime. 
 However, I sometimes find it hard to watch anime as I grow older 
@@ -245,9 +278,11 @@ psyche of the characters and the story better and manga offers a mix
 of what anime and novels provide with the visualizations and depth. 
 At least that’s the general pattern I found between the three mediums.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1408311038l/15788631.jpg" alt = "Book cover of The Melancholy of Haruhi Suzumiya" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/15788631-the-melancholy-of-haruhi-suzumiya">The Melancholy of Haruhi Suzumiya</a> 
+[The Melancholy of Haruhi Suzumiya](https://www.goodreads.com/book/show/15788631-the-melancholy-of-haruhi-suzumiya") 
 is a very popular anime and novel series.
 The eccentricity and comedic characters make the series very enjoyable. 
 The physical copies are usually hard to obtain due to the limited print 
@@ -257,21 +292,27 @@ torrenting the novel online because the novel is being reprinted.
 Oddly enough, I will have two physical copies of the 
 novel. Except one is in Korean which is way out of my comfort zone.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1602794414l/55683145._SX318_.jpg" alt = "Book cover of Banner of the Stars" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/55683145-banner-of-the-stars-volumes-1-3-collector-s-edition-crest-of-the-stars">Banner of the Stars Volumes 1-3 Collector's Edition</a> 
+[Banner of the Stars Volumes 1-3 Collector's Edition](https://www.goodreads.com/book/show/55683145-banner-of-the-stars-volumes-1-3-collector-s-edition-crest-of-the-stars") 
 is a SF (Science Fiction) about a human male and his time in the Ahb 
 (a genetically modified race that has a long life span), 
 space force. This series is the sequel to the Crest of the Stars which was filled with the usual space opera and 
 SF action.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1605001381l/53416552.jpg" alt = "Book cover of Full Metal Panic" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/53416552-full-metal-panic-volumes-4-6-collector-s-edition-full-metal-panic">Full Metal Panic! Volumes 4-6 Collector's Edition</a> 
+[Full Metal Panic! Volumes 4-6 Collector's Edition](https://www.goodreads.com/book/show/53416552-full-metal-panic-volumes-4-6-collector-s-edition-full-metal-panic") 
 is a mecha school life series that has a good balance between comedy and action. 
 I enjoyed the anime series as a kid and found it enjoyable to see the MC, Sousuke, 
 struggling to fit in a place where war and terrorism are foreign to the average 
 human.
+
+<br/>
 
 <center>
 <div style = "display: inline-block;" class = "multiple_img_div center" >
@@ -280,9 +321,9 @@ human.
 </div>
 </center>
 
-<a href = "https://www.goodreads.com/book/show/36538855-tempest">Tempest</a>
+[Tempest](https://www.goodreads.com/book/show/36538855-tempest")
 and 
-<a href = "https://www.goodreads.com/book/show/38926387-desolation">Desolation</a> 
+[Desolation](https://www.goodreads.com/book/show/38926387-desolation") 
 are books 7 and 8 from the renowned Japanese SF series *The Legend of the Galactic Heroes*. 
 The series is filled with the good element that SF and Space Opera provides, 
 the space battles, politics, and war tactics. I absolutely love the series and the anime remake.
@@ -295,48 +336,54 @@ despite all the weakness in a democratic nation and the fact that the autocratic
 empire has shown itself to be more just and fair in dealing with its citizens 
 compared to the democratic alliance.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1348956645l/9062509.jpg" alt = "Book cover of Good Luck, Yukikaze" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/9062509-good-luck-yukikaze">Good Luck Yukikaze</a> is 
+[Good Luck Yukikaze](https://www.goodreads.com/book/show/9062509-good-luck-yukikaze") is 
 another SF novel I enjoy reading. The book is the sequel to *Yukikaze* which focuses 
 on the struggle of a lonely anti-social pilot trying to reconcile the danger of Earth's machine 
 and the mysterious alien race whose purpose and identity are unknown.
 
+<br/>
+
 <img src = "https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1606701225l/56090627._SX318_.jpg" alt = "Book cover of Slayers" class = "center"/>
 
-<a href = "https://www.goodreads.com/book/show/56090627-slayers-volumes-1-3-collector-s-edition-slayers">Slayers Volumes 1-3 Collector's Edition</a> 
+[Slayers Volumes 1-3 Collector's Edition](https://www.goodreads.com/book/show/56090627-slayers-volumes-1-3-collector-s-edition-slayers") 
 is the novel adaption for the anime *Slayers* I grew up with. Although I don't remember much, 
 it's a story about a sorcerer and her adventures around the continent. I thought 
 it would be a nice revisit to the series since I have no interest in rewatching the anime.
+
+<br/>
 
 ---
 
 # List [In Text]
 **Computer:**
 
-* <a href = "https://www.goodreads.com/book/show/52555533-algorithmic-thinking">Algorithmic Thinking: A Problem-Based Introduction</a>
-* <a href = "https://www.goodreads.com/book/show/25666050-algorithms-to-live-by">Algorithms to Live By: The Computer Science of Human Decisions</a>
-* <a href = "https://www.goodreads.com/book/show/38925026-endless-loop">Endless Loop: The History of the BASIC Programming Language</a>
+* [Algorithmic Thinking: A Problem-Based Introduction](https://www.goodreads.com/book/show/52555533-algorithmic-thinking")
+* [Algorithms to Live By: The Computer Science of Human Decisions](https://www.goodreads.com/book/show/25666050-algorithms-to-live-by")
+* [Endless Loop: The History of the BASIC Programming Language](https://www.goodreads.com/book/show/38925026-endless-loop")
 
 **STEM:**
-* <a href = "https://www.goodreads.com/book/show/52275335-how-to-avoid-a-climate-disaster">How to Avoid a Climate Disaster: The Solutions We Have and the Breakthroughs We Need</a>
-* <a href = "https://www.goodreads.com/book/show/43852758-how-to">How To: Absurd Scientific Advice for Common Real-World Problems</a>
-* <a href = "https://www.goodreads.com/book/show/17841838-the-outer-limits-of-reason">The Outer Limits of Reason: What Science, Mathematics, and Logic Cannot Tell Us</a>
-* <a href = "https://www.goodreads.com/book/show/53401494-the-infinite-retina">The Infinite Retina: Spatial Computing, Augmented Reality, and how a collision of new technologies are bringing about the next tech revolution</a>
-* <a href = "https://www.goodreads.com/book/show/39074550-humble-pi">Humble Pi: A Comedy of Maths Errors </a>
-* <a href = "https://www.goodreads.com/book/show/34890015-factfulness">Factfulness: Ten Reasons We're Wrong About the World – and Why Things Are Better Than You Think</a>
+* [How to Avoid a Climate Disaster: The Solutions We Have and the Breakthroughs We Need](https://www.goodreads.com/book/show/52275335-how-to-avoid-a-climate-disaster")
+* [How To: Absurd Scientific Advice for Common Real-World Problems](https://www.goodreads.com/book/show/43852758-how-to")
+* [The Outer Limits of Reason: What Science, Mathematics, and Logic Cannot Tell Us](https://www.goodreads.com/book/show/17841838-the-outer-limits-of-reason")
+* [The Infinite Retina: Spatial Computing, Augmented Reality, and how a collision of new technologies are bringing about the next tech revolution](https://www.goodreads.com/book/show/53401494-the-infinite-retina")
+* [Humble Pi: A Comedy of Maths Errors ](https://www.goodreads.com/book/show/39074550-humble-pi")
+* [Factfulness: Ten Reasons We're Wrong About the World – and Why Things Are Better Than You Think](https://www.goodreads.com/book/show/34890015-factfulness")
 
 
 **Religion and Philosophy**
-* <a href = "https://www.goodreads.com/book/show/480236.The_Screwtape_Letters">Mere Christianity and The Screwtape Letters</a>
-* <a href = "https://www.goodreads.com/book/show/56019043-beyond-ordedr">Beyond Order: 12 More Rules For Life</a>
+* [Mere Christianity and The Screwtape Letters](https://www.goodreads.com/book/show/480236.The_Screwtape_Letters")
+* [Beyond Order: 12 More Rules For Life](https://www.goodreads.com/book/show/56019043-beyond-ordedr")
 
 **Light Novels**
-* <a href = "https://www.goodreads.com/book/show/15788631-the-melancholy-of-haruhi-suzumiya">The Melancholy of Haruhui Suzumiya</a> 
-* <a href = "https://www.goodreads.com/book/show/53416552-full-metal-panic-volumes-4-6-collector-s-edition-full-metal-panic">Full Metal Panic! Volumes 4-6 Collector's Edition</a>
-* <a href = "https://www.goodreads.com/book/show/55683145-banner-of-the-stars-volumes-1-3-collector-s-edition-crest-of-the-stars">Banner of the Stars Volumes 1-3 Collector's Edition</a>
-* <a href = "https://www.goodreads.com/book/show/36538855-tempest">Legend of the Galactic Heroes - Tempest</a>
-* <a href = "https://www.goodreads.com/book/show/38926387-desolation">Legend of the Galactic Heroes - Desolation</a>
-* <a href = "https://www.goodreads.com/book/show/9062509-good-luck-yukikaze">Good Luck Yukikaze</a>
-* <a href = "https://www.goodreads.com/book/show/56090627-slayers-volumes-1-3-collector-s-edition-slayers">Slayers Volumes 1-3 Collector's Edition</a>
+* [The Melancholy of Haruhui Suzumiya](https://www.goodreads.com/book/show/15788631-the-melancholy-of-haruhi-suzumiya") 
+* [Full Metal Panic! Volumes 4-6 Collector's Edition](https://www.goodreads.com/book/show/53416552-full-metal-panic-volumes-4-6-collector-s-edition-full-metal-panic")
+* [Banner of the Stars Volumes 1-3 Collector's Edition](https://www.goodreads.com/book/show/55683145-banner-of-the-stars-volumes-1-3-collector-s-edition-crest-of-the-stars")
+* [Legend of the Galactic Heroes - Tempest](https://www.goodreads.com/book/show/36538855-tempest")
+* [Legend of the Galactic Heroes - Desolation](https://www.goodreads.com/book/show/38926387-desolation")
+* [Good Luck Yukikaze](https://www.goodreads.com/book/show/9062509-good-luck-yukikaze")
+* [Slayers Volumes 1-3 Collector's Edition](https://www.goodreads.com/book/show/56090627-slayers-volumes-1-3-collector-s-edition-slayers")
 
