[post] Rename title of printf

--- a/_posts/programming/2021-02-28-printf-$.md
+++ b/_posts/programming/2021-02-28-printf-$.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: printf - Reordering Arguments using parameter $
+title: printf - Reordering Arguments using $
 categories: [programming]
 ---
 
