[Update metadata] Update tags

--- a/_posts/programming/2020-10-04-c-const.md
+++ b/_posts/programming/2020-10-04-c-const.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Another Look at CONST in C
-categories: [programming, c]
+categories: [programming, c/c++]
 ---
 Recently, I've been learning embedded programming from [udemy](https://www.udemy.com/course/microcontroller-embedded-c-programming/) and there was a section dedicated `const`.
 The section was interesting because despite programming in C a lot during my duration of my undergrad, I have never taken a look at `const` in much detail. I am sure there is more to `const` than
