--- a/_posts/programming/2020-10-15-scanset.md
+++ b/_posts/programming/2020-10-15-scanset.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Another Look at scanf - scanset
-categories: [programming, c]
+categories: [programming, c/c++]
 ---
 
 It came to my attention from an embedded course on [udemy](https://www.udemy.com/course/microcontroller-embedded-c-programming/) the existence of **scanset** in `scanf`
