--- a/_posts/programming/2021-02-28-printf-$.md
+++ b/_posts/programming/2021-02-28-printf-$.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: printf - Reordering Arguments using $
-categories: [programming]
+categories: [programming, c/c++]
 ---
 
 I was recently watching a video by [Live Overflow](https://youtu.be/F6UerHkVdLA?t=435) helping a person troubleshoot a format string exploit through Twitter, and saw something I was very curious about. In the video, the Yotuber poses a 
