[Update] Added equation relationship highlighting

--- a/_posts/math-physics/2021-09-28-lab-tex.md
+++ b/_posts/math-physics/2021-09-28-lab-tex.md
@@ -264,6 +264,171 @@ Click on equation **\ref{eq:density}** to jump to the density equation.
 
 ---
 
+## Drawing Boxes Over Variables of Two Equations to Show Relationship
+
+**Required Package:** `\usepackage{colortbl}` - for color
+
+There are times when you want to overlap two equations one below the other 
+and draw a box around the variables to show a relationship. One relationship 
+that comes to mind is the Beer-Lambert Law with the calibration curve 
+between the absorbance and the concentration of the color absorbing species. 
+
+![An example of the relationship between Beer Lambert Law](../assets/math-physics/tex-boxes2.png)
+
+Inspired by this illustration, I decided to replicate the illustration for a 
+lab report I was writing on determining the acceleration of an object in free 
+fall.
+
+**Code:**
+```
+\begin{tabular}[t]{|c|}
+    \arrayrulecolor{red}
+    \firsthline
+     $A$ \\ $\frac{g}{2}$\\ \lasthline
+\end{tabular}
+\hspace{-1em}
+\begin{tabular}[t]{c}
+     $x^2 +$ \\  $t^2$ +\\
+\end{tabular}
+\hspace{-1em}
+\begin{tabular}[t]{|c|}
+    \arrayrulecolor{blue}
+    \firsthline
+     $B$ \\ $v_o$ \\ \lasthline
+\end{tabular}
+\hspace{-1em}
+\begin{tabular}[t]{c}
+     $x$ \\ $t$ \\ 
+\end{tabular}
+```
+
+**Output:**
+![The illustration of acceleration with the line of best fit](../assets/math-physics/tex-boxes.png)
+
+The idea is to construct tables (one per term) and draw borders on the columns 
+that you wish to highlight. In each cell, it'll contain multiple lines, 
+a variable per line, separated with a newline from the command `\\` 
+and a horizontal line will be drawn over the cell using `\firsthline` 
+and `\lasthline` as seen above. To illustrate, if I want to draw the first box, 
+I would begin the "table" with a border and the two variables separated by a 
+newline.
+
+1. Create a table with one column with a vertical border on the left and right 
+cell (i.e. `|c|`).
+
+**Code:**
+```
+\begin{tabular}[t]{|c|}
+     $A$ \\ 
+     $\frac{g}{2}$\\ 
+\end{tabular}
+```
+
+**Output:**
+![The table with two variables from different equations separated by a newline](../assets/math-physics/tex-box-step1.png)
+
+2. Draw the top border with `\firsthline`:
+
+**Code:**
+```tex
+\begin{tabular}[t]{|c|}
+    \firsthline
+     $A$ \\ 
+     $\frac{g}{2}$\\ 
+\end{tabular}
+```
+
+**Output:**
+![Adding a top border](../assets/math-physics/tex-box-step2.png)
+
+3. Draw the bottom border with `\lasthline`
+
+**Code:**
+```tex
+\begin{tabular}[t]{|c|}
+    \firsthline
+     $A$ \\ 
+     $\frac{g}{2}$\\
+     \lasthline
+\end{tabular}
+```
+
+**Output:**
+
+![Adding a top border](../assets/math-physics/tex-box-step3.png)                
+
+4. Add color to the box with `\arrayrulecolor{red}`
+
+**Code:**
+```tex
+\begin{tabular}[t]{|c|}
+    \arrayrulecolor{red}
+    \firsthline
+     $A$ \\ 
+     $\frac{g}{2}$\\
+     \lasthline
+\end{tabular}
+```
+**Output:**
+![Adding color to the borders](../assets/math-physics/tex-box-step4.png)                
+
+5. Repeat and add another term. If you don't want to highlight the variable, 
+then omit drawing column borders and drawing the top and bottom borders
+
+**Code:**
+```tex
+```
+
+**Output:**
+![Adding another term but with no focus (i.e. no box around it)](../assets/math-physics/tex-box-step5.png)        
+
+**Notice** how there's a lot of space in between the variables. Remove the spacing by using `\hspace`
+
+**Code:**
+```tex
+\begin{tabular}[t]{|c|}
+    \arrayrulecolor{red}
+    \firsthline
+     $A$ \\ 
+     $\frac{g}{2}$\\
+     \lasthline
+\end{tabular}
+\hspace{-1em}
+\begin{tabular}[t]{c}
+     $x^2 +$ \\  $t^2$ +\\
+\end{tabular}
+```
+
+**Output:**
+![Removing 1em of horizontal space between the terms](../assets/math-physics/tex-box-step5.1.png)
+
+---
+
+## Chemical Reaction
+
+**Package:** `\usepackage[version=4]{mhchem}`
+
+To draw a reaction, using `mhchem` package is useful. For instance, 
+
+**Code:**
+```tex
+% ... everything before
+\usepackage[version=4]{mhchem}
+\begin{document}
+\ce{2H + O_2 -> 2H_2O}
+% ... everything after
+```
+
+**Output:**
+
+![H\_2O Chemical reaction from H + O\_2](../assets/math-physics/tex-chem-forumla.png)
+
+Though the reaction arrow is quite long. There are ways to tweak it but I think 
+I'll keep using this package till I find a need to use another package or 
+method to draw the reaction. (i.e. I have yet to use this package for my labs).
+
+---
+
 ## Conclusion
 
 I hope the material presented is useful to you. I'll edit this post once I have time with the link to a generic template I plan on using 
